--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>Refaresh me</h1>
+        <h1>Refresh Me</h1>
         <div class="dice">
-            <p>player 1</p>
+            <p>Player 1</p>
             <img src="" alt="">
         </div>
 
         <div class="dice">
-            <p>player 2</p>
+            <p>Player 2</p>
             <img src="" alt="">
         </div>
     </div>
 </body>
     <footer>
-     www 🎲 App Brewery 🎲 com
+     www 🎲 App ibra 🎲 com
     </footer>
 </html>
